--- a/style.css
+++ b/style.css
@@ -3,50 +3,62 @@ html{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-body {
-    height: 100%;
-    margin: 0px;
-}
-
 header, nav, footer{
     background: #9692B1;
     color: white;
 }
 
+body{
+    margin: 0px;
+    height: 100%;
+    height: 100%;
+    margin: 0px;
+    display: grid;
+    grid-template-rows: 80px 1fr 40px;
+}
+
+article{
+    display: grid;
+    grid-template-columns: 15% 85%;
+}
+
 header{
     text-align: center;
-    min-height: 80px;
-    clear: both;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
-header h1{
+header h1, footer p{
     margin: 0px;
 }
 
 footer{
-    text-align: right;
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: end;
+    align-items: center;
 }
 
-nav{
-    min-width: 20%;
-    min-height: 700px; 
-    float: left;
+footer p{
+    margin-right: 10px;
 }
 
 main{
-    width: 80%;
     display: grid;
-    grid-template-rows: 350px 450px;
-    height: fit-content;
-    float: left;
+    grid-template-rows: 1.2fr 2fr;
+    height: 1fr;
 }
 
 .gora{
     background: #FFF4CC;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 .dol{
@@ -55,6 +67,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
 
 a{
@@ -63,13 +76,15 @@ a{
 
 .gora img{
     width: 150px;
+    height: 100px;
     padding: 20px;
+    cursor: pointer;
 }
 
 .dol img{
     border: 4px solid #9692B1;
-    height: 426px;
-    width: 640px;
+    height: 350px;
+    width: 550px;
 }
 
 .dol img:hover{
